--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<!--Describe the line below-->
+<!--fish blue and pink for webpage tab icon-->
 <link rel="icon" href="https://glitch.com/favicon.ico" />
   
 <title>Cryptid Watch</title>
@@ -12,24 +12,30 @@ name="description"
 content="Your number one resource for the latest Cryptid sightings."
 />
 
-<!-- Describe what the meta elements below for -->
+<!--for sharing on socials media including preview of info and sharing thumbnail -->
 <meta name="robots" content="index,follow" />
 <meta property="og:title" content="Hello World!" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://glitch-hello-website.glitch.me/" />
 <meta name="twitter:card" content="summary" />
 
-<!-- Describe what the link below does -->
+<!--brings the styling information to the browser-->
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <!--Wrap the links below in a header tag and then a nav tag-->
 <!--Add addresses to the links below-->
-<a href="">Home</a><a href="">Today's Sighting</a><a href="">Report</a>
-<!--Describe what goes in the main-->
+<header>
+  <nav>
+  <a href="./index.html">Home</a>
+  <a href="./today.html">Today's Sighting</a>
+  <a href="./report.html">Report</a>
+  </nav>
+</header> 
+<!--first header / title page sets the flow of the entire home page-->
 <main>
 <div class="hero"><div class="hero-text">
-<!-- What is an h1?-->
+<!--the most important or first header on the page-->
 <h1 class="title">Cryptid Watch</h1><p>Your home for the latest <br> cryptic sightings</p>
 </div>
 </div>
@@ -43,7 +49,7 @@ To share you creepy encounter go to our Report page.
 </p>    
 <p>Happy hunting.</p>
 </article></main>
-<!--What goes in the footer?-->
+<!--contact information/final links-->
 <footer><a href="#">Join us on Discord</a></footer>
 </body>
 </html>
