--- a/report.html
+++ b/report.html
@@ -37,8 +37,12 @@ Is it aggressive? There are documented attacks, even in recent times, by Giant S
 Often mentioned alongside the giant squid is another cephalopod that may have given rise to the Kraken myth: the even larger Colossal Squid (Mesonychoteuthis hamiltoni). The colossal squid, however, lives in a much more limited range, in the waters adjacent to the South Pole: some distance from Scandinavia. In essence, it is in no way possible that a Norwegian fisherman spotted one of these specimens.
 </body>
 <main>
-<h1>Report Your Sighting</h1>
-<!--Add your instructions as a list here-->
+<h2> Report Your Kraken Sighting</h2>
+  <ol>
+    <li><b>Email:</b> krakenkhaos@gmail.com </li>
+    <li><b>Subject:</b> Kraken </li>
+    <li><b>Body:</b> explaining your story, where it happened, and when it happened.</li>
+  </ol>
 </main>
 <footer><a href="#">Join us on Discord</a></footer>
 </body>
