--- a/report.html
+++ b/report.html
@@ -21,8 +21,10 @@ content="Share your story with Cryptid Watch."
 <link rel="stylesheet" href="style.css" />
 </head>
 
-  <h1>THE KRAKEN: LEGENDARY SEA MONSTER</h1>
-
+<h1>THE KRAKEN: LEGENDARY SEA MONSTER</h1>
+06/11/2018
+Feel No Pain Argento 925 Made In Italy 
+  
   <body>
   Some say that legends always have a kernel of truth, and this may be the case with the Kraken. From the descriptions that have come down to us, in fact, the sea monster was gigantic in size and appeared like a large octopus, with tentacles that could wrap around a ship.
 
