--- a/today.html
+++ b/today.html
@@ -23,8 +23,23 @@ content="Cryptid Watch's latest sightings."
 <body>
  <main>
 <article>
-<!--Add your article with the title, date, and story below-->
-<!--Add an image with src, alt, width, and height-->
+
+ <h1>THE KRAKEN: LEGENDARY SEA MONSTER</h1>
+ 
+ Some say that legends always have a kernel of truth, and this may be the case with the Kraken. From the descriptions that have come down to us, in fact, the sea monster was gigantic in size and appeared 
+ like a large octopus, with tentacles that could wrap around a ship. Is there such a thing in nature? Yes.The Giant Squid, for example, reaches a length of 13 meters from the fin to the tip of the two longest tentacles. 
+ If we compare these dimensions with the boats typical of the North Sea, we can better imagine the grandeur of such an animal: a two-tree like the ketch, widespread for centuries in the North Sea, comes to 30 meters, slightly longer than the mythical drakkar 
+ with which the Vikings plied the same waves in earlier times. In the eighteenth century, when the Kraken populated the tales of Norwegian sailors, a popular vessel for fishing in the North Sea was the dogre, a two-masted vessel that hardly exceeded 15 meters in length. 
+ The Giant Squid, in short, equaled in length most of the vessels that sailed off Scandinavia. Widespread in the depths of all oceans, it is also found in the waters that wash over Norway. Its appearance is eerie: it has giant eyes, a cape culminating in a fin, eight arms and two very long tentacles. Is it aggressive? There are documented attacks, even in recent times, 
+ by Giant Squid on boats. In 1980 an Architeuthis (giant squid), for example, attacked a French submarine at a depth of 3,000 meters, and violent attacks have also occurred at the surface. Often mentioned alongside the giant squid is another cephalopod that may have given rise to the Kraken myth: the even larger Colossal Squid (Mesonychoteuthis hamiltoni). The colossal squid, however, 
+ lives in a much more limited range, in the waters adjacent to the South Pole: some distance from Scandinavia. In essence, it is in no way possible that a Norwegian fisherman spotted one of these specimens. 
+ 
+ <ol>
+   <br>      
+  <li><b>Email:</b> puppies.supplies@aol.com</li>
+  <li><b>Subject:</b> Boots on the Ground</li>
+  <li><b>Body:</b> Your story, where it happened, and when it happened.</li>
+      </ol><!--Add an image with src, alt, width, and height-->
 </article>
 </main>
 <footer>
