--- a/today.html
+++ b/today.html
@@ -33,6 +33,16 @@ content="Cryptid Watch's latest sightings."
  The Giant Squid, in short, equaled in length most of the vessels that sailed off Scandinavia. Widespread in the depths of all oceans, it is also found in the waters that wash over Norway. Its appearance is eerie: it has giant eyes, a cape culminating in a fin, eight arms and two very long tentacles. Is it aggressive? There are documented attacks, even in recent times, 
  by Giant Squid on boats. In 1980 an Architeuthis (giant squid), for example, attacked a French submarine at a depth of 3,000 meters, and violent attacks have also occurred at the surface. Often mentioned alongside the giant squid is another cephalopod that may have given rise to the Kraken myth: the even larger Colossal Squid (Mesonychoteuthis hamiltoni). The colossal squid, however, 
  lives in a much more limited range, in the waters adjacent to the South Pole: some distance from Scandinavia. In essence, it is in no way possible that a Norwegian fisherman spotted one of these specimens. 
+
+</article>
+ 
+ <img src="assets/assets/360_F_1508097308_OYJ4QsMkpQEokELz55cX1HaD7eXJ1saT.jpg" alt="kraken in water attacking" height="460" width="700"/>
+
+
+
+
+
+
  
  <ol>
    <br>      
