--- a/today.html
+++ b/today.html
@@ -25,6 +25,9 @@ content="Cryptid Watch's latest sightings."
 <article>
 
  <h1>THE KRAKEN: LEGENDARY SEA MONSTER</h1>
+
+ 06/11/2018<br>
+ Argento 925<br>
  
  Some say that legends always have a kernel of truth, and this may be the case with the Kraken. From the descriptions that have come down to us, in fact, the sea monster was gigantic in size and appeared 
  like a large octopus, with tentacles that could wrap around a ship. Is there such a thing in nature? Yes.The Giant Squid, for example, reaches a length of 13 meters from the fin to the tip of the two longest tentacles. 
@@ -34,22 +37,11 @@ content="Cryptid Watch's latest sightings."
  by Giant Squid on boats. In 1980 an Architeuthis (giant squid), for example, attacked a French submarine at a depth of 3,000 meters, and violent attacks have also occurred at the surface. Often mentioned alongside the giant squid is another cephalopod that may have given rise to the Kraken myth: the even larger Colossal Squid (Mesonychoteuthis hamiltoni). The colossal squid, however, 
  lives in a much more limited range, in the waters adjacent to the South Pole: some distance from Scandinavia. In essence, it is in no way possible that a Norwegian fisherman spotted one of these specimens. 
 
-</article>
- 
- <img src="assets/assets/360_F_1508097308_OYJ4QsMkpQEokELz55cX1HaD7eXJ1saT.jpg" alt="kraken in water attacking" height="460" width="700"/>
-
-
-
-
-
-
- 
- <ol>
-   <br>      
+       
   <li><b>Email:</b> puppies.supplies@aol.com</li>
   <li><b>Subject:</b> Boots on the Ground</li>
   <li><b>Body:</b> Your story, where it happened, and when it happened.</li>
-      </ol><!--Add an image with src, alt, width, and height-->
+      </ol> <img src="assets/assets/360_F_1508097308_OYJ4QsMkpQEokELz55cX1HaD7eXJ1saT.jpg" alt="kraken in water attacking" height="460" width="700"/>
 </article>
 </main>
 <footer>
