--- a/today.html
+++ b/today.html
@@ -41,7 +41,9 @@ content="Cryptid Watch's latest sightings."
   <li><b>Email:</b> puppies.supplies@aol.com</li>
   <li><b>Subject:</b> Boots on the Ground</li>
   <li><b>Body:</b> Your story, where it happened, and when it happened.</li>
-      </ol> <img src="assets/assets/360_F_1508097308_OYJ4QsMkpQEokELz55cX1HaD7eXJ1saT.jpg" alt="kraken in water attacking" height="460" width="700"/>
+
+ <img src="assets/assets/360_F_1508097308_OYJ4QsMkpQEokELz55cX1HaD7eXJ1saT.jpg" alt="kraken in water attacking" height="460" width="700"/>
+ 
 </article>
 </main>
 <footer>
