--- a/today.html
+++ b/today.html
@@ -38,9 +38,9 @@ content="Cryptid Watch's latest sightings."
  lives in a much more limited range, in the waters adjacent to the South Pole: some distance from Scandinavia. In essence, it is in no way possible that a Norwegian fisherman spotted one of these specimens. 
 
        
-  <li><b>Email:</b> puppies.supplies@aol.com</li>
-  <li><b>Subject:</b> Boots on the Ground</li>
-  <li><b>Body:</b> Your story, where it happened, and when it happened.</li>
+  <li><b>Email:</b> Krakenkhaos@gmail.com</li>
+  <li><b>Subject:</b> kraken sightings!/li>
+  <li><b>Body:</b> if you think youve seen the kraken explain your story, where it happened, and when it happened.</li>
 
  <img src="assets/assets/360_F_1508097308_OYJ4QsMkpQEokELz55cX1HaD7eXJ1saT.jpg" alt="kraken in water attacking" height="460" width="700"/>
  
