--- a/today.html
+++ b/today.html
@@ -25,7 +25,8 @@ content="Cryptid Watch's latest sightings."
 <article>
 
  <h1>THE KRAKEN: LEGENDARY SEA MONSTER</h1>
-<br> 
+
+ <br> 
  06/11/2018<br>
  Argento 925<br>
  
@@ -35,7 +36,7 @@ content="Cryptid Watch's latest sightings."
  with which the Vikings plied the same waves in earlier times. In the eighteenth century, when the Kraken populated the tales of Norwegian sailors, a popular vessel for fishing in the North Sea was the dogre, a two-masted vessel that hardly exceeded 15 meters in length. 
  The Giant Squid, in short, equaled in length most of the vessels that sailed off Scandinavia. Widespread in the depths of all oceans, it is also found in the waters that wash over Norway. Its appearance is eerie: it has giant eyes, a cape culminating in a fin, eight arms and two very long tentacles. Is it aggressive? There are documented attacks, even in recent times, 
  by Giant Squid on boats. In 1980 an Architeuthis (giant squid), for example, attacked a French submarine at a depth of 3,000 meters, and violent attacks have also occurred at the surface. Often mentioned alongside the giant squid is another cephalopod that may have given rise to the Kraken myth: the even larger Colossal Squid (Mesonychoteuthis hamiltoni). The colossal squid, however, 
- lives in a much more limited range, in the waters adjacent to the South Pole: some distance from Scandinavia. In essence, it is in no way possible that a Norwegian fisherman spotted one of these specimens. 
+ lives in a much more limited range, in the waters adjacent to the South Pole: some distance from Scandinavia. In essence, it is in no way possible that a Norwegian fisherman spotted one of these specimens.<br>
 
        
   <li><b>Email:</b> Krakenkhaos@gmail.com</li>
